[gd_scene load_steps=5 format=3 uid="uid://b618s8yms5b50"]

[ext_resource type="Texture2D" uid="uid://beoerbu073eqr" path="res://assets/textures/wega.png" id="1_q83eg"]
[ext_resource type="Script" path="res://scenes/wega.gd" id="2_smnq3"]
[ext_resource type="AudioStream" uid="uid://ddbsp3pytmph6" path="res://assets/SFX/hl2 stalker scream.mp3" id="3_xnr02"]

[sub_resource type="BoxShape3D" id="BoxShape3D_4c0fa"]
size = Vector3(1.39148, 1.7153, 0.257813)

[node name="Wega" type="Sprite3D"]
pixel_size = 0.001
billboard = 1
texture = ExtResource("1_q83eg")
region_rect = Rect2(20, 0, 0, 0)
script = ExtResource("2_smnq3")

[node name="StartTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0463257, 0.0695038, 0.00976563)
shape = SubResource("BoxShape3D_4c0fa")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_xnr02")
autoplay = true

[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
